Fix diff stats alignment

--- a/github-dark.css
+++ b/github-dark.css
@@ -156,11 +156,8 @@
     margin: 0 !important;
   }
   /* gist diff stats - fix alignment */
-  .file-diffstat {
+  .diffstat {
     font-size: 14px !important;
-  }
-  .file-diffstat .diffstat-bar {
-    margin: 0 .5em !important;
   }
   /* === Remove shadow === */
   h1, h2, h3, h4, pre, pre *, code, ul, li, p, input, a, th, .news, #footer ul.sosueme li.main, .more-repos, .button,
